# iiitb-menu

./: .eleventy.js  .gitignore  __init__.py  _headers  get-menu.js  netlify.toml  package-lock.json  package.json  postcss.config.js  process-xlsx-deprec.py  process-xlsx-deprec2.py  process-xlsx-old.py  process-xlsx.py  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: netlify-hourly-deploy.yml
assets/: index.js  tailwind.css
data/: env.js  menu.json
public/: _headers  _redirects  manifest.webmanifest
src/: index.njk  shortcodes.js  transforms.js
src/includes/: AboutPage.njk  DayView.njk  ErrorPage.njk  index.js
