[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["Aravind Reddy Voggu <zerodividedby0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.25.0"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
